docs: mejorar documentación y añadir ejemplo XML